# agents-by-orchagent

./: .gitignore
_archive/backend-security-auditor/: README.md  requirements.txt  sandbox_main.py
_archive/billing-doc-analyzer/: pyproject.toml  sandbox_main.py  schema.json
_archive/billing-doc-analyzer/src/billing_doc_analyzer/: main.py
_archive/billing-doc-analyzer/src/billing_doc_analyzer/llm/: __init__.py  base.py  mock.py
_archive/invoice-scanner/: Dockerfile  orchagent.json  pyproject.toml
_archive/invoice-scanner/src/invoice_scanner/: __init__.py  extraction_prompt.txt  gemini_client.py
_archive/landing-page-audit/: README.md  prompt.md
_archive/linkedin-optimizer/: README.md  prompt.md
_archive/react-security-scanner/: orchagent.json  sandbox_main.py  schema.json
_archive/security-assessment-report/: orchagent.json
_archive/vps-fixer/: README.md
agents/code-review-agent/: orchagent.json  schema.json
agents/onboarding-agent/: orchagent.json  schema.json
agents/security-agent/: orchagent.json  prompt.md
agents/test-gen-agent/: prompt.md
agents/useeffect-agent/: orchagent.json  prompt.md  schema.json
ai-data-leak-scanner/: orchagent.json  sandbox_main.py
backend-security-auditor/: orchagent.json  schema.json
billing-doc-analyzer/: .dockerignore  Dockerfile  README.md  orchagent.json  requirements.txt
code-stats/: README.md  main.py  orchagent.json  pyproject.toml
code-stats/src/code_stats/: __init__.py
code-stats/tests/: test_code_stats.py
cold-email-writer/: README.md  orchagent.json  prompt.md
content-engagement-analyzer/: orchagent.json  prompt.md
content-humanizer/: README.md  orchagent.json  prompt.md
dep-scanner/: Dockerfile  orchagent.json  pyproject.toml  requirements.txt  sandbox_main.py
dep-scanner/src/dep_scanner/: main.py  scanner.py
dep-scanner/src/dep_scanner/scanners/: __init__.py
dep-scanner/tests/: test_main.py
docs-public/: docs.json  introduction.mdx  mint.json
docs-public-v2/: docs.json  index.mdx  llms.txt  orch-hq.mdx  quickstart.mdx  troubleshooting.mdx
docs-public-v2/api-reference/: openapi.json  overview.mdx
docs-public-v2/building-agents/: agent-types.mdx  building-orchestrators.mdx  environments.mdx  manifest-format.mdx  orchestration.mdx  publishing.mdx  sdk.mdx
docs-public-v2/concepts/: billing.mdx  byok.mdx  local-vs-server.mdx  monetization.mdx  rate-limits.mdx  security.mdx
docs-public-v2/guides/: cicd.mdx  orchestration-walkthrough.mdx
docs-public-v2/using-agents/: api-reference.mdx  budgets.mdx  cli-commands.mdx  code-snippets.mdx  integrations.mdx  mcp.mdx  messages.mdx  scheduling.mdx  (+3 more)
excel-workflow-automator/: orchagent.json
freelance-proposal-writer/: orchagent.json  prompt.md
invoice-scanner/: README.md  sandbox_main.py  schema.json
landing-page-audit/: orchagent.json  schema.json
landing-page-roast/: README.md  prompt.md
leak-finder/: Dockerfile  README.md  orchagent.json  pyproject.toml  requirements.txt  sandbox_main.py  schema.json
leak-finder/scripts/ralph/: prd.json  progress.txt  prompt.md  ralph.sh
leak-finder/src/leak_finder/: cli.py  llm_analyzer.py  models.py  patterns.py  scanner.py
leak-finder/tests/: __init__.py  test_patterns.py  test_scanner.py
linkedin-optimizer/: orchagent.json
nextjs-seo-debugger/: orchagent.json  requirements.txt  sandbox_main.py
pitch-deck-reviewer/: README.md
react-security-scanner/: orchagent.json  requirements.txt  sandbox_main.py
roast-my-resume/: README.md  orchagent.json  prompt.md
saas-competitor-analyzer/: schema.json
security-assessment-report/: requirements.txt  sandbox_main.py
security-review/: orchagent.json  pyproject.toml  requirements.txt  sandbox_main.py
security-review/src/security_review/: __init__.py  agent_client.py  git_utils.py  main.py  models.py  recommendations.py
security-review/src/security_review/scanners/: __init__.py  api.py  common.py  frontend.py  logging.py
security-review/tests/: __init__.py  test_main.py
skill-scanner/: README.md  orchagent.json  prompt.md
taskmaster/: README.md  orchagent.json  prompt.md
tools/leak-finder/: pyproject.toml
useeffect-checker/: orchagent.json  schema.json
vps-checker/: README.md  orchagent.json  sandbox_main.py
vps-fixer/: README.md  orchagent.json  sandbox_main.py
(+138 files in other folders)
