[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-stats"
version = "0.1.0"
description = "Analyzes code for quality metrics - line counts, function lengths, complexity warnings"
requires-python = ">=3.11"
dependencies = ["orchagent-sdk>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
