[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leak-finder"
version = "0.1.0"
description = "AI agent that finds leaked secrets and credentials in your codebase"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.26.0"]

[tool.setuptools.packages.find]
where = ["src"]
